# arrow-tiberius

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: README.md  api-boundary.md  benchmarks.md  dependency-audit.md  direct-raw-benchmark-comparison.md  direct-tds-encoder.md  evidence-matrix.md  integration-tests.md  observability.md  release-v0.1.md  type-mapping.md
docs/benchmark-results/: 2026-05-17-local-writer-compare-three-backends.md  2026-05-17-local-writer-compare.md  2026-05-19-primitive-direct-raw-compare.md  2026-05-19-variable-width-direct-raw-compare.md  2026-05-22-issue-75-extended-primitive-release.md  2026-05-22-issue-76-uint64-policy-release.md  2026-05-22-issue-82-direct-framed-vs-direct-raw.md  2026-05-22-issue-82-final-profile-evidence.md  2026-05-22-issue-82-published-threshold-repeats.md  README.md
examples/: backend_selection.rs  planning_diagnostics.rs  policy_dependent_planning.rs  schema_to_ddl.rs  sqlserver_batch_write.rs
src/: arrow.rs  connection.rs  conversion.rs  ddl.rs  diagnostic.rs  error.rs  identifier.rs  lib.rs  mssql.rs  observability.rs  profile.rs  schema.rs  write.rs
src/arrow/: cell.rs  field.rs
src/conversion/: arrow_to_mssql.rs
src/conversion/arrow_to_mssql/: decimal.rs  fixed_size_binary.rs  primitive.rs  temporal.rs  uint64.rs  variable_width.rs
src/mssql/: cell.rs  column.rs  ddl.rs  profile.rs  ty.rs
src/mssql/cell/: from_arrow.rs
src/mssql/cell/from_arrow/: decimal.rs  primitive.rs  temporal.rs  variable.rs  variable_width.rs
src/mssql/cell/from_arrow/temporal/: date.rs  date64.rs  datetime.rs  datetime2.rs  datetimeoffset.rs  time.rs  timezone.rs
src/observability/: schema.rs  writer.rs
src/observability/writer/: batch.rs  direct_raw.rs  finish.rs  initialization.rs
src/schema/: mapping.rs  table_mapping.rs  table_plan.rs  type_conversion.rs
src/write/: cell.rs  context.rs  convert.rs  direct.rs  policy.rs  profile.rs  record_batch.rs  token_row.rs  writer.rs
src/write/direct/: binding.rs  bound.rs  decimal.rs  encoder.rs  layout.rs  measure.rs  payload.rs  plan.rs  primitive.rs  rows.rs  temporal.rs  types.rs  uint64.rs  variable_width.rs
src/write/direct/binding/: append.rs  fill.rs  measure.rs
src/write/direct/rows/: append.rs  fixed_width.rs  payload.rs
src/write/direct/types/: decimal.rs  fixed_size_binary.rs  primitive.rs  temporal.rs  uint64.rs  variable_width.rs
src/write/direct/types/temporal/: value.rs
src/write/record_batch/: validate.rs
tests/: compatibility_sqlserver.rs  integration_sqlserver.rs
xtask/: Cargo.toml
xtask/arrow-odbc-runner/: Cargo.toml
xtask/arrow-odbc-runner/src/: main.rs
xtask/containers/odbc-runner/: Dockerfile
xtask/odbc-bcp-runner/: Cargo.toml
xtask/odbc-bcp-runner/src/: main.rs
xtask/src/: main.rs  odbc_runner.rs  sqlserver.rs  writer_bench.rs
xtask/src/writer_bench/: dataset.rs  sqlserver_profile.rs
