[workspace]
members = ["xtask"]
exclude = ["xtask/arrow-odbc-runner", "xtask/odbc-bcp-runner"]
resolver = "3"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[package]
name = "arrow-tiberius"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mag1cfrog/arrow-tiberius"
description = "Apache Arrow and SQL Server bridge through Tiberius"
readme = "README.md"
keywords = ["arrow", "sql-server", "tiberius", "tds"]
categories = ["database"]

[lints]
workspace = true

[lib]
name = "arrow_tiberius"
path = "src/lib.rs"

[features]
bench-profile = []
integration-tests = []

[dependencies]
arrow-array = { version = "58.2.0", features = ["chrono-tz"] }
arrow-buffer = "58.2.0"
arrow-schema = "58.2.0"
chrono = { version = "0.4.40", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
snafu = "0.9.0"
tiberius = { package = "tiberius-raw-bulk", version = "0.12.3-raw-bulk.5" }

[dev-dependencies]
arrow-data = "58.2.0"
tokio = { version = "1", features = ["macros", "net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
