[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
arrow-tiberius = { path = "..", features = ["bench-profile"] }
arrow-array = "58.3.0"
arrow-ipc = "58.3.0"
arrow-schema = "58.3.0"
tiberius = { package = "tiberius-raw-bulk", version = "=0.12.3-raw-bulk.14", default-features = false, features = [
    "tds73",
    "winauth",
    "native-tls",
] }
tokio = { version = "1", features = ["macros", "net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
